# skybot

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: integration-skyportal.yaml  integration.yaml  tests.yaml
skybot/: __init__.py  client.py  gcn.py
tests/: conftest.py  test_client.py  test_gcn.py  test_integration.py
