[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "skybot"
version = "0.1.0"
description = "Generic SkyPortal API client — baseline interactions reusable across instances (Fritz, ICARE, ...)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = ["requests>=2.28"]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.9", "pre-commit>=3"]

[tool.setuptools.packages.find]
include = ["skybot*"]

[tool.pytest.ini_options]
# Default run = offline unit tests only. Integration tests opt in with `-m integration`
# (and the SKYBOT_TEST_* env vars; see tests/conftest.py).
addopts = "-m 'not integration'"
markers = [
    "integration: hits a real SkyPortal instance (needs SKYBOT_TEST_BASE/TOKEN)",
]
